config/base/webhook/manifests.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: mutating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: billing-webhook
      namespace: system
      path: /mutate-billing-miloapis-com-v1alpha1-billingaccount
  failurePolicy: Fail
  name: mbillingaccount.kb.io
  rules:
  - apiGroups:
    - billing.miloapis.com
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - billingaccounts
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: billing-webhook
      namespace: system
      path: /mutate-billing-miloapis-com-v1alpha1-billingarrangement
  failurePolicy: Fail
  name: mbillingarrangement.kb.io
  rules:
  - apiGroups:
    - billing.miloapis.com
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    resources:
    - billingarrangements
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: billing-webhook
      namespace: system
      path: /mutate-billing-miloapis-com-v1alpha1-paymentmethod
  failurePolicy: Fail
  name: mpaymentmethod.kb.io
  rules:
  - apiGroups:
    - billing.miloapis.com
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - paymentmethods
  sideEffects: None
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: validating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: billing-webhook
      namespace: system
      path: /validate-billing-miloapis-com-v1alpha1-billingaccount
  failurePolicy: Fail
  name: vbillingaccount.kb.io
  rules:
  - apiGroups:
    - billing.miloapis.com
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - billingaccounts
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: billing-webhook
      namespace: system
      path: /validate-billing-miloapis-com-v1alpha1-billingaccountbinding
  failurePolicy: Fail
  name: vbillingaccountbinding.kb.io
  rules:
  - apiGroups:
    - billing.miloapis.com
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - billingaccountbindings
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: billing-webhook
      namespace: system
      path: /validate-billing-miloapis-com-v1alpha1-billingarrangement
  failurePolicy: Fail
  name: vbillingarrangement.kb.io
  rules:
  - apiGroups:
    - billing.miloapis.com
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - billingarrangements
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: billing-webhook
      namespace: system
      path: /validate-billing-miloapis-com-v1alpha1-billingentitlement
  failurePolicy: Fail
  name: vbillingentitlement.kb.io
  rules:
  - apiGroups:
    - billing.miloapis.com
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - billingentitlements
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: billing-webhook
      namespace: system
      path: /validate-billing-miloapis-com-v1alpha1-invoice
  failurePolicy: Fail
  name: vinvoice.kb.io
  rules:
  - apiGroups:
    - billing.miloapis.com
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - invoices
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: billing-webhook
      namespace: system
      path: /validate-billing-miloapis-com-v1alpha1-meterdefinition
  failurePolicy: Fail
  name: vmeterdefinition.kb.io
  rules:
  - apiGroups:
    - billing.miloapis.com
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - meterdefinitions
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: billing-webhook
      namespace: system
      path: /validate-billing-miloapis-com-v1alpha1-monitoredresourcetype
  failurePolicy: Fail
  name: vmonitoredresourcetype.kb.io
  rules:
  - apiGroups:
    - billing.miloapis.com
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - monitoredresourcetypes
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: billing-webhook
      namespace: system
      path: /validate-billing-miloapis-com-v1alpha1-offer
  failurePolicy: Fail
  name: voffer.kb.io
  rules:
  - apiGroups:
    - billing.miloapis.com
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - offers
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: billing-webhook
      namespace: system
      path: /validate-billing-miloapis-com-v1alpha1-paymentmethod
  failurePolicy: Fail
  name: vpaymentmethod.kb.io
  rules:
  - apiGroups:
    - billing.miloapis.com
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - paymentmethods
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: billing-webhook
      namespace: system
      path: /validate-billing-miloapis-com-v1alpha1-paymentmethodclass
  failurePolicy: Fail
  name: vpaymentmethodclass.kb.io
  rules:
  - apiGroups:
    - billing.miloapis.com
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - paymentmethodclasses
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: billing-webhook
      namespace: system
      path: /validate-billing-miloapis-com-v1alpha1-servicepricing
  failurePolicy: Fail
  name: vservicepricing.kb.io
  rules:
  - apiGroups:
    - billing.miloapis.com
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - servicepricings
  sideEffects: None
